k8s/sterlingpdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sterlingpdf
  namespace: pdf
spec:
  selector:
    matchLabels:
      app: sterlingpdf
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sterlingpdf
    spec:
      containers:
      - name: sterlingpdf
        image: frooodle/s-pdf:0.36.0
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "700m"
            memory: "300Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 45
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
            - mountPath: /configs
              name: sterlingpdf-data
        ports:
        - containerPort: 8080
      volumes:
        - name: sterlingpdf-data
          persistentVolumeClaim:
            claimName: pdf-data-pvc
